@@ -49,7 +49,10 @@ struct Weapon depends (Vector) { {{
 		skip; // GetChargeBarAmount
 		skip; // GetChargeBarAmount?
 		skip; // GetFocusEntity
-		skip; // GetMainEntity
+		
+		"8b41??c3????????????????????????8b41??c3????????????????????????8b41??c3????????????????????????558bec6aff":
+		Entity* GetMainEntity();
+		
 		skip; // TriggerNewRoom
 		skip; // GetMarkedTargetVariant
 		skip; // SupportsTractorBeam
@@ -59,6 +62,7 @@ struct Weapon depends (Vector) { {{
     };
 	
 	Entity* _owner : 0x4;
+	//Entity* _entity : 0x8;
 	float _fireDelay : 0xc;
 	float _maxFireDelay : 0x10;
 	float _charge : 0x14;
